src/test/deca/codegen/valid/MoinsInitDivMoinsInit.deca
// Description:
//    tests simple division
//
// Resultats:
//
//
// Historique:
//    cree le 21/01/2017
{
int y = 1;
int x = 1;
print((-x)/(-y));
}
