src/test/deca/codegen/invalid/NoInitFDivNoInit.deca
// Description:
//    division sans initialisation
//
// Resultats:
//  Erreur
//
// Historique:
//    cree le 22/01/2017
{
int x;
float y;
print(y / x);
}
